# CUDA_project

./: CMakeLists.txt
include/: aux.h
src/: matrix_mult.cu  test.cu  vector_add.cu
